Started work on the x86 tutorial 2 page

--- a/learnx86/learnx86.html
+++ b/learnx86/learnx86.html
@@ -32,7 +32,8 @@
 			<a href="https://www.archlinux.org/" id="niceln">Arch Linux</a><br/>
 			<a href="https://www.vim.org/" id="niceln">Vim</a><br/><br/>
 			<h3>Posts:</h3><br/>
-			<a href="t1.html" id="niceln">Tutorial 1: Hello World</a>
+			<a href="t1.html" id="niceln">Tutorial 1: Hello World</a><br/>
+			<a href="t2.html" id="niceln">Tutorial 2: Comparing and Jumping</a>
 		</div>
 	</body>
 
