Began work on the LSM on FPGA section

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,6 @@
 			<a href="#" id="niceln">Game Boy Emulator (WIP)</a><br/><br/>
 			<h3>Hardware:</h3>
 			<a href="#" id="niceln">Desktop Power Supply (WIP)</a><br/>
-			<a href="nerfclk/nerfclk.html" id="niceln">Nerf Gun Trigger Clock Circuit (WIP)</a><br/>
 			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/>
 			<a href="susfah/susfah.html" id="niceln">Sustainable Folding At Home (WIP)</a><br/>
 			<a href="#" id="niceln">CPU Design Intro (WIP)</a><br/><br/>
@@ -42,6 +41,8 @@
 			<a href="#" id="niceln">Comet Colour - Image to Lego Bricks (WIP)</a><br/><br/>
 			<h3>Machine Learning:</h3>
 			<a href="ml/linreg.html" id="niceln">Linear Regression</a><br/><br/>
+			<h3>Neuromorphic Computing:</h3>
+			<a href="sumofres/sumofres.html" id="niceln">Implementing an LSM on an FPGA (WIP)</a><br/><br/>
 			<h3>Operating Systems</h3>
 			<a href="#" id="niceln">Bare Bones (WIP)</a><br/>
 			<a href="#" id="niceln">Extended Bare Bones (WIP)</a><br/><br/>
