Made additions to the home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body onload="load()" onresize="resize()" onscroll="update()">
 		<div id="titleBar">
-			<a id="title"  href="index.html"><h1 alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</h1></a>
+			<a id="title"  href="index.html"><h1 alt="Project Showcase">Project Showcase</h1></a>
 		</div>
 		<div id="navbar">
 			<ul>
@@ -18,7 +18,25 @@
 				<a href="projects.html"><li>Projects</li></a>
 			</ul>
 		</div>
-		<div id="content"><br/>
+		<div id="content">
+			<div id="infobar">
+				<img/ id="pp" src="temp.png">
+			</div>
+			<br/>
+			<h2>Matt Young</h2>
+			<br/>
+			PhD Student studying Quantum Communications in the Department of Computer Science at the University of York.<br/>
+			<br/>
+			<h3>Education:</h3>		
+			MEng Computer Science - Graduated July 2022<br/>
+			<br/>
+			<h3>Interests:</h3>
+			Quantum Computation and Quantum Communications<br/>
+			Computer Hardware and Low-Level Software<br/>
+			Quantum Mechanics<br/>
+			Video Game Development<br/>
+			
+			
 		</div>
 	</body>
 
