--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,7 @@
 			<a href="#" id="niceln">Game Boy Emulator (WIP)</a><br/><br/>
 			<h3>Hardware:</h3>
 			<a href="#" id="niceln">Desktop Power Supply (WIP)</a><br/>
-			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/>
-			<a href="susfah/susfah.html" id="niceln">Sustainable Folding At Home (WIP)</a><br/>
-			<a href="#" id="niceln">CPU Design Intro (WIP)</a><br/><br/>
+			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/><br/>
 			<h3>Image Processing:</h3>
 			<a href="#" id="niceln">Comet Colour - Image to Lego Bricks (WIP)</a><br/><br/>
 			<h3>Machine Learning:</h3>
