Began work on the Plug&Play Logic Board Pages

--- a/projects.html
+++ b/projects.html
@@ -29,10 +29,12 @@
 			<a href="#" id="niceln">Comet Programming Language (WIP)</a><br/><br/>
 			<h3>Game Development:</h3>
 			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine (WIP)</a><br/>
-			<a href="#" id="niceln">Hexagonal Grids(WIP)</a><br/>
+			<a href="#" id="niceln">Maze Generation (WIP)</a><br/>
+			<a href="#" id="niceln">Hexagonal Grids (WIP)</a><br/>
 			<a href="#" id="niceln">Mouse Picking (WIP)</a><br/>
 			<a href="#" id="niceln">Game Boy Emulator (WIP)</a><br/><br/>
 			<h3>Hardware:</h3>
+			<a href="pnplb/pnplb.html" id="niceln">Plug-&-Play Logic Board (WIP)</a><br/>
 			<a href="#" id="niceln">Desktop Power Supply (WIP)</a><br/>
 			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/><br/>
 			<h3>Image Processing:</h3>
