Updated the form link

--- a/uybc-elections-2024-betting-pool.html
+++ b/uybc-elections-2024-betting-pool.html
@@ -39,7 +39,7 @@
 		<div class="text"><br/>
 			<p class="vspace">Welcome to the Matt Young UYBC Election Betting Pool.</p>
 			<p class="vspace">Placement of bets shall be done via the medium of Google Form.</p>
-			<p class="vspace"><a id="niceln" href="https://l.instagram.com/?u=https%3A%2F%2Fforms.gle%2FH8JGBsE2hpsWnU2R8&e=AT322IR6ho9kAdWTVoNcDaRZus7-DMoXWn2WKQDMbWUi09nrurtU5YGWWKTMIL6U-h6lhlvV53VSqS53HkBr-0gUvoqRT2ETNrYwwSdtpBvCjPJtcibQhzXjDc5aRakvG7U5MpQ">
+			<p class="vspace"><a id="niceln" href="https://forms.gle/y9My2WosikeyHuHd6">
 				Betting Pool Google Form
 			</a></p>
 			<p class="vspace-but-more">This page will be updated regularly with bets and wagers, however this will be done manually, so please bear with.</p>
