Updated the bets table

--- a/uybc-elections-2024-betting-pool.html
+++ b/uybc-elections-2024-betting-pool.html
@@ -45,8 +45,15 @@
 			<p class="vspace-but-more">This page will be updated regularly with bets and wagers, however this will be done manually, so please bear with.</p>
 			<table>
 				<th>Safety Officer</th>
+				<th>Head Social Sec</th>
+				<th>Comms Officer</th>
 				<tr>
 					<td>Sofia - A lock of hair</td>
+					<td>Harry - Free Vanbrugh Socks</td>
+					<td>Arran - Hi-vis Beanie</td>
+				</tr>
+				<tr>
+					<td>Maddy - Baked goods presented with flair 🕺</td>
 				</tr>
 			</table>
 		</div>
