Updated the table

--- a/uybc-elections-2024-betting-pool.html
+++ b/uybc-elections-2024-betting-pool.html
@@ -55,6 +55,9 @@
 				<tr>
 					<td>Maddy - Baked goods presented with flair 🕺</td>
 				</tr>
+				<tr>
+					<td>Fraser - A picture of Matt hung somewhere in the boathouse</td>
+				</tr>
 			</table>
 		</div>
 	</body>
