Removed WIP Projects from the main projects page
Listed current projects

--- a/wip-projects.html
+++ b/wip-projects.html
@@ -20,13 +20,9 @@
 		</div>
 		<div id="content"><br/>
 			<h2>Project List</h2><br/>
-			<h3>Current Projects:</h3>
-			<p>"Make your own neural network" by Tariq Rashid</p>
-			<p>"Ray Tracing in One Weekend" by Peter Shirley, Trevor Black, and Steve Hollasch</p>
-			<p>Learning x86 Assembly</p></br>
 			<h3>Artificial Intelligence:</h3>
 			<a href="ml/linreg.html" id="niceln">Linear Regression</a><br/>
-			<!-- <a href="nnintro/nnintro.html" id="niceln">Introduction to Neural Networks (WIP)</a><br/><br/>
+			<a href="nnintro/nnintro.html" id="niceln">Introduction to Neural Networks (WIP)</a><br/><br/>
 			<h3>Assembly:</h3>
 			<a href="learnx86/learnx86.html" id="niceln">Learning x86 Assembly (WIP)</a><br/><br/>
 			<h3>Compilers:</h3>
@@ -50,7 +46,7 @@
 			<a href="#" id="niceln">Bare Bones (WIP)</a><br/>
 			<a href="#" id="niceln">Extended Bare Bones (WIP)</a><br/><br/>
 			<h3>Quantum Computing:</h3>
-			<a href="#" id="niceln">Quantum Simulation Library (WIP)</a><br/><br/> -->
+			<a href="#" id="niceln">Quantum Simulation Library (WIP)</a><br/><br/>
 		</div>
 	</body>
 
